--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,24 +12,111 @@ Table of Contents:
     1. Global Styles
 ////////////////////////*/
 
+:root{
+    /* CSS HEX */
+    --peach: #f9c48bff;
+    --atomic-tangerine: #f69051ff;
+    --burnt-sienna: #f26d40ff;
+    --black-bean: #260803ff;
+    --seashell: #fdefecff;
+}
+
 body {
     font-family: 'Dosis', sans-serif;
     font-weight: 400;
+    background-color: var(--peach)
 }
 
 /*////////////////////////
     2. Typography
 ////////////////////////*/
 
+h1{
+    font-size: 32px;
+    font-weight: 900;
+}
 
+h2{
+    font-size: 28px;
+    font-weight: 900;
+}
+
+h3{
+    font-size: 24px;
+    font-weight: 700;
+}
+
+h4{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+h5{
+    font-size: 16px;
+    font-weight: 500;
+}
+
+h6{
+    font-size: 12px;
+    font-weight: 500;
+}
+
+p{
+    font-size: 16px;
+    font-weight: 500;
+}
 
 /*////////////////////////
     3. Areas
 ////////////////////////*/
 
+section{
+    background-color: var(--seashell);
+    border-radius: 5px;
+    padding: 0.5em 3em;
+    margin: 1.5em;
+}
 
+img{
+    width: 100%;
+}
 
 
 /*////////////////////////
     2. Media Queries
 ////////////////////////*/
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    body{
+        background-color: var(--atomic-tangerine);
+    }
+
+    h2{
+        font-size: 2em;
+    }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+
+}
+
+/*X-Large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+    body{
+        background-color: var(--burnt-sienna);
+    }
+
+    h2{
+        font-size: 2.5em;
+    }
+}
+
+/*XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) {}
